bug: move speed increases over tirals
trying to fix this. not succeeding

--- a/Generate BKK Stimuli.ipynb
+++ b/Generate BKK Stimuli.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "79e1a98a",
+   "id": "d9ea8226",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "bf158977",
+   "execution_count": 64,
+   "id": "dc56ab76",
    "metadata": {
     "scrolled": true
    },
@@ -24,134 +24,70 @@
      "output_type": "stream",
      "text": [
       "{complexity: 79, move: 0, smooth: 24, eyes: false},\n",
-      "{complexity: 79, move: 0, smooth: 24, eyes: true},\n",
       "{complexity: 79, move: 83, smooth: 24, eyes: false},\n",
-      "{complexity: 79, move: 83, smooth: 24, eyes: true},\n",
       "{complexity: 79, move: 166, smooth: 24, eyes: false},\n",
-      "{complexity: 79, move: 166, smooth: 24, eyes: true},\n",
       "{complexity: 79, move: 250, smooth: 24, eyes: false},\n",
-      "{complexity: 79, move: 250, smooth: 24, eyes: true},\n",
       "{complexity: 125, move: 0, smooth: 24, eyes: false},\n",
-      "{complexity: 125, move: 0, smooth: 24, eyes: true},\n",
       "{complexity: 125, move: 83, smooth: 24, eyes: false},\n",
-      "{complexity: 125, move: 83, smooth: 24, eyes: true},\n",
       "{complexity: 125, move: 166, smooth: 24, eyes: false},\n",
-      "{complexity: 125, move: 166, smooth: 24, eyes: true},\n",
       "{complexity: 125, move: 250, smooth: 24, eyes: false},\n",
-      "{complexity: 125, move: 250, smooth: 24, eyes: true},\n",
       "{complexity: 168, move: 0, smooth: 24, eyes: false},\n",
-      "{complexity: 168, move: 0, smooth: 24, eyes: true},\n",
       "{complexity: 168, move: 83, smooth: 24, eyes: false},\n",
-      "{complexity: 168, move: 83, smooth: 24, eyes: true},\n",
       "{complexity: 168, move: 166, smooth: 24, eyes: false},\n",
-      "{complexity: 168, move: 166, smooth: 24, eyes: true},\n",
       "{complexity: 168, move: 250, smooth: 24, eyes: false},\n",
-      "{complexity: 168, move: 250, smooth: 24, eyes: true},\n",
       "{complexity: 225, move: 0, smooth: 24, eyes: false},\n",
-      "{complexity: 225, move: 0, smooth: 24, eyes: true},\n",
       "{complexity: 225, move: 83, smooth: 24, eyes: false},\n",
-      "{complexity: 225, move: 83, smooth: 24, eyes: true},\n",
       "{complexity: 225, move: 166, smooth: 24, eyes: false},\n",
-      "{complexity: 225, move: 166, smooth: 24, eyes: true},\n",
       "{complexity: 225, move: 250, smooth: 24, eyes: false},\n",
-      "{complexity: 225, move: 250, smooth: 24, eyes: true},\n",
       "{complexity: 79, move: 0, smooth: 99, eyes: false},\n",
-      "{complexity: 79, move: 0, smooth: 99, eyes: true},\n",
       "{complexity: 79, move: 83, smooth: 99, eyes: false},\n",
-      "{complexity: 79, move: 83, smooth: 99, eyes: true},\n",
       "{complexity: 79, move: 166, smooth: 99, eyes: false},\n",
-      "{complexity: 79, move: 166, smooth: 99, eyes: true},\n",
       "{complexity: 79, move: 250, smooth: 99, eyes: false},\n",
-      "{complexity: 79, move: 250, smooth: 99, eyes: true},\n",
       "{complexity: 125, move: 0, smooth: 99, eyes: false},\n",
-      "{complexity: 125, move: 0, smooth: 99, eyes: true},\n",
       "{complexity: 125, move: 83, smooth: 99, eyes: false},\n",
-      "{complexity: 125, move: 83, smooth: 99, eyes: true},\n",
       "{complexity: 125, move: 166, smooth: 99, eyes: false},\n",
-      "{complexity: 125, move: 166, smooth: 99, eyes: true},\n",
       "{complexity: 125, move: 250, smooth: 99, eyes: false},\n",
-      "{complexity: 125, move: 250, smooth: 99, eyes: true},\n",
       "{complexity: 168, move: 0, smooth: 99, eyes: false},\n",
-      "{complexity: 168, move: 0, smooth: 99, eyes: true},\n",
       "{complexity: 168, move: 83, smooth: 99, eyes: false},\n",
-      "{complexity: 168, move: 83, smooth: 99, eyes: true},\n",
       "{complexity: 168, move: 166, smooth: 99, eyes: false},\n",
-      "{complexity: 168, move: 166, smooth: 99, eyes: true},\n",
       "{complexity: 168, move: 250, smooth: 99, eyes: false},\n",
-      "{complexity: 168, move: 250, smooth: 99, eyes: true},\n",
       "{complexity: 225, move: 0, smooth: 99, eyes: false},\n",
-      "{complexity: 225, move: 0, smooth: 99, eyes: true},\n",
       "{complexity: 225, move: 83, smooth: 99, eyes: false},\n",
-      "{complexity: 225, move: 83, smooth: 99, eyes: true},\n",
       "{complexity: 225, move: 166, smooth: 99, eyes: false},\n",
-      "{complexity: 225, move: 166, smooth: 99, eyes: true},\n",
       "{complexity: 225, move: 250, smooth: 99, eyes: false},\n",
-      "{complexity: 225, move: 250, smooth: 99, eyes: true},\n",
       "{complexity: 79, move: 0, smooth: 175, eyes: false},\n",
-      "{complexity: 79, move: 0, smooth: 175, eyes: true},\n",
       "{complexity: 79, move: 83, smooth: 175, eyes: false},\n",
-      "{complexity: 79, move: 83, smooth: 175, eyes: true},\n",
       "{complexity: 79, move: 166, smooth: 175, eyes: false},\n",
-      "{complexity: 79, move: 166, smooth: 175, eyes: true},\n",
       "{complexity: 79, move: 250, smooth: 175, eyes: false},\n",
-      "{complexity: 79, move: 250, smooth: 175, eyes: true},\n",
       "{complexity: 125, move: 0, smooth: 175, eyes: false},\n",
-      "{complexity: 125, move: 0, smooth: 175, eyes: true},\n",
       "{complexity: 125, move: 83, smooth: 175, eyes: false},\n",
-      "{complexity: 125, move: 83, smooth: 175, eyes: true},\n",
       "{complexity: 125, move: 166, smooth: 175, eyes: false},\n",
-      "{complexity: 125, move: 166, smooth: 175, eyes: true},\n",
       "{complexity: 125, move: 250, smooth: 175, eyes: false},\n",
-      "{complexity: 125, move: 250, smooth: 175, eyes: true},\n",
       "{complexity: 168, move: 0, smooth: 175, eyes: false},\n",
-      "{complexity: 168, move: 0, smooth: 175, eyes: true},\n",
       "{complexity: 168, move: 83, smooth: 175, eyes: false},\n",
-      "{complexity: 168, move: 83, smooth: 175, eyes: true},\n",
       "{complexity: 168, move: 166, smooth: 175, eyes: false},\n",
-      "{complexity: 168, move: 166, smooth: 175, eyes: true},\n",
       "{complexity: 168, move: 250, smooth: 175, eyes: false},\n",
-      "{complexity: 168, move: 250, smooth: 175, eyes: true},\n",
       "{complexity: 225, move: 0, smooth: 175, eyes: false},\n",
-      "{complexity: 225, move: 0, smooth: 175, eyes: true},\n",
       "{complexity: 225, move: 83, smooth: 175, eyes: false},\n",
-      "{complexity: 225, move: 83, smooth: 175, eyes: true},\n",
       "{complexity: 225, move: 166, smooth: 175, eyes: false},\n",
-      "{complexity: 225, move: 166, smooth: 175, eyes: true},\n",
       "{complexity: 225, move: 250, smooth: 175, eyes: false},\n",
-      "{complexity: 225, move: 250, smooth: 175, eyes: true},\n",
       "{complexity: 79, move: 0, smooth: 250, eyes: false},\n",
-      "{complexity: 79, move: 0, smooth: 250, eyes: true},\n",
       "{complexity: 79, move: 83, smooth: 250, eyes: false},\n",
-      "{complexity: 79, move: 83, smooth: 250, eyes: true},\n",
       "{complexity: 79, move: 166, smooth: 250, eyes: false},\n",
-      "{complexity: 79, move: 166, smooth: 250, eyes: true},\n",
       "{complexity: 79, move: 250, smooth: 250, eyes: false},\n",
-      "{complexity: 79, move: 250, smooth: 250, eyes: true},\n",
       "{complexity: 125, move: 0, smooth: 250, eyes: false},\n",
-      "{complexity: 125, move: 0, smooth: 250, eyes: true},\n",
       "{complexity: 125, move: 83, smooth: 250, eyes: false},\n",
-      "{complexity: 125, move: 83, smooth: 250, eyes: true},\n",
       "{complexity: 125, move: 166, smooth: 250, eyes: false},\n",
-      "{complexity: 125, move: 166, smooth: 250, eyes: true},\n",
       "{complexity: 125, move: 250, smooth: 250, eyes: false},\n",
-      "{complexity: 125, move: 250, smooth: 250, eyes: true},\n",
       "{complexity: 168, move: 0, smooth: 250, eyes: false},\n",
-      "{complexity: 168, move: 0, smooth: 250, eyes: true},\n",
       "{complexity: 168, move: 83, smooth: 250, eyes: false},\n",
-      "{complexity: 168, move: 83, smooth: 250, eyes: true},\n",
       "{complexity: 168, move: 166, smooth: 250, eyes: false},\n",
-      "{complexity: 168, move: 166, smooth: 250, eyes: true},\n",
       "{complexity: 168, move: 250, smooth: 250, eyes: false},\n",
-      "{complexity: 168, move: 250, smooth: 250, eyes: true},\n",
       "{complexity: 225, move: 0, smooth: 250, eyes: false},\n",
-      "{complexity: 225, move: 0, smooth: 250, eyes: true},\n",
       "{complexity: 225, move: 83, smooth: 250, eyes: false},\n",
-      "{complexity: 225, move: 83, smooth: 250, eyes: true},\n",
       "{complexity: 225, move: 166, smooth: 250, eyes: false},\n",
-      "{complexity: 225, move: 166, smooth: 250, eyes: true},\n",
       "{complexity: 225, move: 250, smooth: 250, eyes: false},\n",
-      "{complexity: 225, move: 250, smooth: 250, eyes: true},\n",
-      "128\n"
+      "64\n"
      ]
     }
    ],
@@ -159,7 +95,7 @@
     "smooth = {\"s1\": 24, \"s2\": 99, \"s3\": 175, \"s4\": 250}\n",
     "scount = {\"sc6\": 79, \"sc8\": 125, \"sc10\": 168, \"sc12\": 225}\n",
     "move = {\"nomove\": 0, \"m83\": 83, \"m166\": 166, \"m250\": 250}\n",
-    "eyes = {\"noeyes\": \"false\", \"eyes\": \"true\"}\n",
+    "eyes = {\"noeyes\": \"false\"}\n",
     "\n",
     "count = 0\n",
     "\n",
@@ -179,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b87bc5f",
+   "id": "afc72b54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7dd1cc9d",
+   "id": "fdd66af8",
    "metadata": {},
    "outputs": [
     {
