--- a/Generate BKK Stimuli.ipynb
+++ b/Generate BKK Stimuli.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d9ea8226",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
+   "id": "86b2a241",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79\n",
+      "167\n",
+      "255\n"
+     ]
+    }
+   ],
+   "source": [
+    "mn = 79\n",
+    "mx = 255\n",
+    "\n",
+    "step = (mx-mn)//2\n",
+    "\n",
+    "for i in np.arange(mn,mx+1,step):\n",
+    "    print( i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "dc56ab76",
    "metadata": {
     "scrolled": true
@@ -23,88 +49,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{complexity: 79, move: 0, smooth: 24, eyes: false},\n",
-      "{complexity: 79, move: 83, smooth: 24, eyes: false},\n",
-      "{complexity: 79, move: 166, smooth: 24, eyes: false},\n",
-      "{complexity: 79, move: 250, smooth: 24, eyes: false},\n",
-      "{complexity: 125, move: 0, smooth: 24, eyes: false},\n",
-      "{complexity: 125, move: 83, smooth: 24, eyes: false},\n",
-      "{complexity: 125, move: 166, smooth: 24, eyes: false},\n",
-      "{complexity: 125, move: 250, smooth: 24, eyes: false},\n",
-      "{complexity: 168, move: 0, smooth: 24, eyes: false},\n",
-      "{complexity: 168, move: 83, smooth: 24, eyes: false},\n",
-      "{complexity: 168, move: 166, smooth: 24, eyes: false},\n",
-      "{complexity: 168, move: 250, smooth: 24, eyes: false},\n",
-      "{complexity: 225, move: 0, smooth: 24, eyes: false},\n",
-      "{complexity: 225, move: 83, smooth: 24, eyes: false},\n",
-      "{complexity: 225, move: 166, smooth: 24, eyes: false},\n",
-      "{complexity: 225, move: 250, smooth: 24, eyes: false},\n",
-      "{complexity: 79, move: 0, smooth: 99, eyes: false},\n",
-      "{complexity: 79, move: 83, smooth: 99, eyes: false},\n",
-      "{complexity: 79, move: 166, smooth: 99, eyes: false},\n",
-      "{complexity: 79, move: 250, smooth: 99, eyes: false},\n",
-      "{complexity: 125, move: 0, smooth: 99, eyes: false},\n",
-      "{complexity: 125, move: 83, smooth: 99, eyes: false},\n",
-      "{complexity: 125, move: 166, smooth: 99, eyes: false},\n",
-      "{complexity: 125, move: 250, smooth: 99, eyes: false},\n",
-      "{complexity: 168, move: 0, smooth: 99, eyes: false},\n",
-      "{complexity: 168, move: 83, smooth: 99, eyes: false},\n",
-      "{complexity: 168, move: 166, smooth: 99, eyes: false},\n",
-      "{complexity: 168, move: 250, smooth: 99, eyes: false},\n",
-      "{complexity: 225, move: 0, smooth: 99, eyes: false},\n",
-      "{complexity: 225, move: 83, smooth: 99, eyes: false},\n",
-      "{complexity: 225, move: 166, smooth: 99, eyes: false},\n",
-      "{complexity: 225, move: 250, smooth: 99, eyes: false},\n",
-      "{complexity: 79, move: 0, smooth: 175, eyes: false},\n",
-      "{complexity: 79, move: 83, smooth: 175, eyes: false},\n",
-      "{complexity: 79, move: 166, smooth: 175, eyes: false},\n",
-      "{complexity: 79, move: 250, smooth: 175, eyes: false},\n",
-      "{complexity: 125, move: 0, smooth: 175, eyes: false},\n",
-      "{complexity: 125, move: 83, smooth: 175, eyes: false},\n",
-      "{complexity: 125, move: 166, smooth: 175, eyes: false},\n",
-      "{complexity: 125, move: 250, smooth: 175, eyes: false},\n",
-      "{complexity: 168, move: 0, smooth: 175, eyes: false},\n",
-      "{complexity: 168, move: 83, smooth: 175, eyes: false},\n",
-      "{complexity: 168, move: 166, smooth: 175, eyes: false},\n",
-      "{complexity: 168, move: 250, smooth: 175, eyes: false},\n",
-      "{complexity: 225, move: 0, smooth: 175, eyes: false},\n",
-      "{complexity: 225, move: 83, smooth: 175, eyes: false},\n",
-      "{complexity: 225, move: 166, smooth: 175, eyes: false},\n",
-      "{complexity: 225, move: 250, smooth: 175, eyes: false},\n",
-      "{complexity: 79, move: 0, smooth: 250, eyes: false},\n",
-      "{complexity: 79, move: 83, smooth: 250, eyes: false},\n",
-      "{complexity: 79, move: 166, smooth: 250, eyes: false},\n",
-      "{complexity: 79, move: 250, smooth: 250, eyes: false},\n",
-      "{complexity: 125, move: 0, smooth: 250, eyes: false},\n",
-      "{complexity: 125, move: 83, smooth: 250, eyes: false},\n",
-      "{complexity: 125, move: 166, smooth: 250, eyes: false},\n",
-      "{complexity: 125, move: 250, smooth: 250, eyes: false},\n",
-      "{complexity: 168, move: 0, smooth: 250, eyes: false},\n",
-      "{complexity: 168, move: 83, smooth: 250, eyes: false},\n",
-      "{complexity: 168, move: 166, smooth: 250, eyes: false},\n",
-      "{complexity: 168, move: 250, smooth: 250, eyes: false},\n",
-      "{complexity: 225, move: 0, smooth: 250, eyes: false},\n",
-      "{complexity: 225, move: 83, smooth: 250, eyes: false},\n",
-      "{complexity: 225, move: 166, smooth: 250, eyes: false},\n",
-      "{complexity: 225, move: 250, smooth: 250, eyes: false},\n",
-      "64\n"
+      "{complexity: 79, noise: 0, smooth: 24, spike: 120},\n",
+      "{complexity: 79, noise: 0, smooth: 24, spike: 250},\n",
+      "{complexity: 79, noise: 150, smooth: 24, spike: 120},\n",
+      "{complexity: 79, noise: 150, smooth: 24, spike: 250},\n",
+      "{complexity: 225, noise: 0, smooth: 24, spike: 120},\n",
+      "{complexity: 225, noise: 0, smooth: 24, spike: 250},\n",
+      "{complexity: 225, noise: 150, smooth: 24, spike: 120},\n",
+      "{complexity: 225, noise: 150, smooth: 24, spike: 250},\n",
+      "{complexity: 79, noise: 0, smooth: 137, spike: 120},\n",
+      "{complexity: 79, noise: 0, smooth: 137, spike: 250},\n",
+      "{complexity: 79, noise: 150, smooth: 137, spike: 120},\n",
+      "{complexity: 79, noise: 150, smooth: 137, spike: 250},\n",
+      "{complexity: 225, noise: 0, smooth: 137, spike: 120},\n",
+      "{complexity: 225, noise: 0, smooth: 137, spike: 250},\n",
+      "{complexity: 225, noise: 150, smooth: 137, spike: 120},\n",
+      "{complexity: 225, noise: 150, smooth: 137, spike: 250},\n",
+      "{complexity: 79, noise: 0, smooth: 250, spike: 120},\n",
+      "{complexity: 79, noise: 0, smooth: 250, spike: 250},\n",
+      "{complexity: 79, noise: 150, smooth: 250, spike: 120},\n",
+      "{complexity: 79, noise: 150, smooth: 250, spike: 250},\n",
+      "{complexity: 225, noise: 0, smooth: 250, spike: 120},\n",
+      "{complexity: 225, noise: 0, smooth: 250, spike: 250},\n",
+      "{complexity: 225, noise: 150, smooth: 250, spike: 120},\n",
+      "{complexity: 225, noise: 150, smooth: 250, spike: 250},\n",
+      "24\n"
      ]
     }
    ],
    "source": [
-    "smooth = {\"s1\": 24, \"s2\": 99, \"s3\": 175, \"s4\": 250}\n",
-    "scount = {\"sc6\": 79, \"sc8\": 125, \"sc10\": 168, \"sc12\": 225}\n",
-    "move = {\"nomove\": 0, \"m83\": 83, \"m166\": 166, \"m250\": 250}\n",
+    "# smooth = {\"s1\": 24, \"s2\": 137, \"s4\": 250}\n",
+    "# scount = {\"sc6\": 79, \"sc10\": 200, \"sc14\": 250,}\n",
+    "# noise = {\"noNoise\": 0}\n",
+    "# le = {\"s\": 120, \"l\": 250}\n",
+    "\n",
+    "smooth = {\"s1\": 24, \"s2\": 137, \"s4\": 250}\n",
+    "scount = {\"sc6\": 79, \"sc12\": 225}\n",
+    "noise = {\"noNoise\": 0, \"noise\": 150}\n",
+    "le = {\"s\": 120, \"l\": 250}\n",
+    "\n",
+    "\n",
     "eyes = {\"noeyes\": \"false\"}\n",
     "\n",
     "count = 0\n",
     "\n",
     "for s in smooth:\n",
     "    for c in scount:\n",
-    "        for m in move:\n",
-    "            for e in eyes:\n",
-    "                string = \"{complexity: \"+str(scount[c])+\", move: \"+str(move[m]) + \\\n",
-    "                \", smooth: \" +str(smooth[s]) + \", eyes: \"+ eyes[e]+\"},\"\n",
+    "        for n in noise:\n",
+    "            for l in le:            \n",
+    "                for e in eyes:\n",
+    "                    string = \"{complexity: \"+str(scount[c])+\", noise: \"+str(noise[n]) + \\\n",
+    "                    \", smooth: \" +str(smooth[s]) + \", spike: \"+ str(le[l]) +\"},\"\n",
     "                \n",
     "                print(string)\n",
     "                count +=1\n",
